--- a/admin.html
+++ b/admin.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -112,7 +113,8 @@
             border-radius: 8px;
         }
 
-        .modal-header, .modal-footer {
+        .modal-header,
+        .modal-footer {
             border: none;
         }
 
@@ -126,20 +128,32 @@
         }
     </style>
 </head>
+
 <body>
     <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-            <span class="navbar-brand">Admin Page</span>
-            <div class="d-flex align-items-center">
-                <span class="user-email" id="userEmail"></span>
-                <button class="logout-btn" onclick="logout()">Logout</button>
+            <span class="navbar-brand">Страница учителя</span>
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="profileDropdown"
+                    data-bs-toggle="dropdown" aria-expanded="false">
+                    Профиль
+                </button>
+                <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="profileDropdown">
+                    <li><span class="dropdown-item-text" id="userEmail">user@example.com</span></li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
+                    <li><button class="dropdown-item" onclick="showChangePasswordModal()">Сменить пароль</button></li>
+                    <li><button class="dropdown-item" onclick="logout()">Выйти</button></li>
+                </ul>
             </div>
         </div>
     </nav>
+
     <div class="container">
         <div class="d-flex justify-content-between align-items-center mb-4">
-            <h2 class="mb-0">Your Tests</h2>
-            <button class="btn btn-primary" onclick="showAddTestModal()">Add Test</button>
+            <h2 class="mb-0">Ваши тесты</h2>
+            <button class="btn btn-primary" onclick="showAddTestModal()">Добавить новый тест</button>
         </div>
         <div id="testsContainer">
             <!-- Tests will be loaded here -->
@@ -151,22 +165,60 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="addTestModalLabel">Add Test</h5>
+                    <h5 class="modal-title" id="addTestModalLabel">Добавить тест</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <div class="mb-3">
-                        <label for="testNameInput" class="form-label">Test Name</label>
+                        <label for="testNameInput" class="form-label">Имя теста</label>
                         <input type="text" class="form-control" id="testNameInput" placeholder="Enter test name">
                     </div>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary" onclick="addTest()">Add Test</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Отмена</button>
+                    <button type="button" class="btn btn-primary" onclick="addTest()">Добавить</button>
                 </div>
             </div>
         </div>
     </div>
+
+    <!-- Change Password Modal -->
+    <div class="modal fade" id="changePasswordModal" tabindex="-1" aria-labelledby="changePasswordModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="changePasswordModalLabel">Смена пароля</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="mb-3">
+                        <label for="currentPasswordInput" class="form-label">Текущий пароль</label>
+                        <input type="password" class="form-control" id="currentPasswordInput"
+                            placeholder="Введите текущий пароль">
+                    </div>
+                    <div class="mb-3">
+                        <label for="newPasswordInput" class="form-label">Новый пароль</label>
+                        <input type="password" class="form-control" id="newPasswordInput"
+                            placeholder="Введите новый пароль">
+                    </div>
+                    <div class="mb-3">
+                        <label for="confirmPasswordInput" class="form-label">Подтвердите пароль</label>
+                        <input type="password" class="form-control" id="confirmPasswordInput"
+                            placeholder="Подтвердите новый пароль">
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Отмена</button>
+                    <button type="button" class="btn btn-primary" onclick="changePassword()">Сменить пароль</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
 
     <!-- Firebase configuration and initialization -->
     <script src="admin.js"></script>
@@ -180,11 +232,13 @@
                 </div>
                 <div class="modal-body" id="alertModalBody"></div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
                 </div>
             </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
+
 </html>
