--- a/edittest.html
+++ b/edittest.html
@@ -193,7 +193,7 @@
                         <div class="mb-3">
                             <label for="questionType" class="form-label">Тип теста</label>
                             <select class="form-control" id="questionType" required>
-                                <option value="test">Выбор одного Варианта</option>
+                                <option value="test">Выбор варианта/ов</option>
                                 <option value="yesno">выбор да/нет</option>
                             </select>
                         </div>
