--- a/admin.html
+++ b/admin.html
@@ -182,6 +182,30 @@
         </div>
     </div>
 
+    <!-- Rename Test Modal -->
+    <div class="modal fade" id="renameTestModal" tabindex="-1" aria-labelledby="renameTestModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="renameTestModalLabel">Изменить имя теста</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="mb-3">
+                        <label for="renameTestInput" class="form-label">Новое имя теста</label>
+                        <input type="text" class="form-control" id="renameTestInput" placeholder="Введите новое имя">
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Отмена</button>
+                    <button type="button" class="btn btn-primary" onclick="renameTest()">Сохранить</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <!-- Change Password Modal -->
     <div class="modal fade" id="changePasswordModal" tabindex="-1" aria-labelledby="changePasswordModalLabel"
         aria-hidden="true">
