--- a/test.html
+++ b/test.html
@@ -106,6 +106,40 @@
         #nextButton {
             display: none;
         }
+
+        .result-chart {
+            position: relative;
+            width: 200px;
+            height: 200px;
+            margin: 0 auto;
+        }
+
+        .result-chart::before {
+            content: "";
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 100px;
+            height: 100px;
+            background-color: #343a40;
+            border-radius: 50%;
+            transform: translate(-50%, -50%);
+            z-index: 1;
+        }
+
+        .result-chart svg {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+
+        .result-summary {
+            font-size: 1.5rem;
+            font-weight: bold;
+            color: #28a745;
+        }
     </style>
 </head>
 
@@ -145,9 +179,12 @@
         <div class="card result-card mt-4">
             <div class="card-body text-center">
                 <h3 class="card-title">Результаты теста</h3>
-                <p id="resultText"></p>
+                <div id="resultChart" class="result-chart"></div>
+                <p class="result-summary" id="resultSummary"></p>
             </div>
         </div>
+        
+
     </div>
 
     <div class="container">
