--- a/ban.html
+++ b/ban.html
@@ -28,7 +28,7 @@
     <div class="message">
         Уважаемые!!<br><br>
         Прохождение тестов закрыто на время.<br>
-        УВАЖАЕМЫЕ 10 КЛАССЫ, ОБСОЛЮТНО КАЖДОМУ, КТО ПРОХОДИЛ ТЕСТ, БУДЕТ ВЫДАНО 0 БАЛЛОВ.<br><br>
+        УВАЖАЕМЫЕ 10 КЛАССЫ, AБСОЛЮТНО КАЖДОМУ, КТО ПРОХОДИЛ ТЕСТ, БУДЕТ ВЫДАНО 0 БАЛЛОВ.<br><br>
         ПЕРЕДАЙТЕ ЭТО ВСЕМУ ВАШЕМУ КЛАССУ.<br>
         БУДЕТЕ ДУМАТЬ СВОЕЙ ГОЛОВОЙ ПЕРЕД ТЕМ КАК ПИСАТЬ ГAДОСТИ.
     </div>
