--- a/ban.html
+++ b/ban.html
@@ -27,10 +27,8 @@
 <body>
     <div class="message">
         Уважаемые!!<br><br>
-        Прохождение тестов закрыто на время.<br>
-        УВАЖАЕМЫЕ 10 КЛАССЫ, AБСОЛЮТНО КАЖДОМУ, КТО ПРОХОДИЛ ТЕСТ, БУДЕТ ВЫДАНО 0 БАЛЛОВ.<br><br>
-        ПЕРЕДАЙТЕ ЭТО ВСЕМУ ВАШЕМУ КЛАССУ.<br>
-        БУДЕТЕ ДУМАТЬ СВОЕЙ ГОЛОВОЙ ПЕРЕД ТЕМ КАК ПИСАТЬ ГAДОСТИ.
+        Прохождение тестов закрыто на время.<br><br>от учителя идут большие жалобы в сторону 10х классов и оставленных результатов.<br> Повторение подобного приведет к анулированию всех результатов
+        
     </div>
 </body>
 </html>
