--- a/test.html
+++ b/test.html
@@ -103,9 +103,9 @@
             /* светлый текст для ссылки "made by" */
         }
 
-        #nextButton {
+        /* #nextButton {
             display: none;
-        }
+        } */
 
         .result-chart {
             position: relative;
