--- a/test.html
+++ b/test.html
@@ -188,9 +188,7 @@
     </div>
 
     <div class="container">
-        <p class="made-by">тг автора <a href="https://t.me/yarchefis" style="color: #adb5bd;">@yarchefis</a></p>
-        <p class="made-by">сайт автора(временно не работает) <a href="https://yarchefis.ru"
-                style="color: #adb5bd;">yarchefis.ru</a></p>
+        <p class="made-by"><a href="https://t.me/young_yarchefis" style="color: #adb5bd;">пишем по техническим вопросам(клик)</a></p>
     </div>
 
     <script src="test.js"></script>
