--- a/ban.html
+++ b/ban.html
@@ -26,9 +26,8 @@
 </head>
 <body>
     <div class="message">
-        Уважаемые!!<br><br>
-        Прохождение тестов закрыто на время.<br><br>от учителя идут большие жалобы в сторону 10х классов и оставленных результатов.<br> Повторение подобного приведет к анулированию всех результатов
-        
+        Уважаемые 8, 9, 10, 11 классы!<br><br>
+        Прохождение тестов было закрыто до 25 числа 15:00. <br> 9, 10, 11 классы тест завершится до 26 числа включительно<br> 8, 11 классы тесты завершились(11 класс первая группа, чей урок не 27-28)
     </div>
 </body>
 </html>
