--- a/ban.html
+++ b/ban.html
@@ -15,8 +15,8 @@
             font-family: Arial, sans-serif;
         }
         .message {
-            color: red;
-            font-size: 2em;
+            color: black;
+            font-size: 1em;
             font-weight: bold;
             text-align: center;
             max-width: 800px;
@@ -27,7 +27,7 @@
 <body>
     <div class="message">
         Уважаемые 8, 9, 10, 11 классы!<br><br>
-        Прохождение тестов было закрыто до 25 числа 15:00. <br> 9, 10, 11 классы тест завершится до 26 числа включительно<br> 8, 11 классы тесты завершились(11 класс первая группа, чей урок не 27-28)
+        Прохождение тестов было закрыто до 25 числа 15:00. <br> 9, 10, 11 классы тест завершится до 26 числа включительно<br> 8, 11 классы тесты завершились.
     </div>
 </body>
 </html>
