--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,59 +12,131 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <!-- Custom CSS -->
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
+
         body {
-            background: linear-gradient(45deg, #6ab1d7, #33d9b2);
+            font-family: 'Roboto', sans-serif;
+            background-color: #f4f4f9;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
             margin: 0;
         }
+
         .container {
-            background: white;
+            background: #fff;
             padding: 2rem;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            max-width: 400px;
+            border-radius: 12px;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+            max-width: 360px;
             width: 100%;
+            transition: all 0.3s ease;
+            opacity: 0;
+            transform: translateY(30px);
+            animation: fadeIn 0.8s forwards;
         }
+
+        @keyframes fadeIn {
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
         h1 {
-            color: #33d9b2;
+            color: #333;
+            font-weight: 500;
+            margin-bottom: 1.5rem;
+            text-align: center;
         }
+
+        label {
+            font-weight: 500;
+            color: #666;
+        }
+
+        input {
+            border: 2px solid #ddd;
+            border-radius: 8px;
+            padding: 0.75rem;
+            transition: border-color 0.3s;
+        }
+
+        input:focus {
+            border-color: #333;
+        }
+
         .btn-primary {
-            background-color: #33d9b2;
+            background-color: #333;
             border: none;
+            padding: 0.75rem;
+            border-radius: 8px;
+            transition: background-color 0.3s;
+            cursor: pointer;
         }
+
         .btn-primary:hover {
-            background-color: #28b998;
+            background-color: #555;
         }
+
+        .btn-primary:active {
+            transform: scale(0.98);
+        }
+
         .alert {
             display: none;
             margin-top: 10px;
         }
+
+        input,
+        button {
+            transition: all 0.2s ease;
+        }
+
+        input:hover,
+        button:hover {
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+        }
+
+        input::placeholder {
+            color: #bbb;
+        }
+
+        @media (max-width: 768px) {
+            .container {
+                padding: 1.5rem;
+            }
+        }
+
+
+        
     </style>
 </head>
+
 <body>
     <div class="container">
-        <h1 class="text-center">Teacher Login</h1>
+        <h1>Вход в панель</h1>
         <form id="loginForm" class="mt-4">
             <div class="mb-3">
-                <label for="login-email" class="form-label">Email:</label>
+                <label for="login-email" class="form-label">Почта:</label>
                 <input type="email" class="form-control" id="login-email" placeholder="Enter your email" required>
             </div>
             <div class="mb-3">
-                <label for="login-password" class="form-label">Password:</label>
-                <input type="password" class="form-control" id="login-password" placeholder="Enter your password" required>
+                <label for="login-password" class="form-label">Пароль:</label>
+                <input type="password" class="form-control" id="login-password" placeholder="Enter your password"
+                    required>
             </div>
-            <button type="submit" class="btn btn-primary w-100">Login</button>
+            <button type="submit" class="btn btn-primary w-100">Войти</button>
             <!-- Alert for errors -->
             <div id="error-alert" class="alert alert-danger" role="alert"></div>
         </form>
     </div>
 
     <!-- Firebase configuration and initialization -->
-     <script src="index.js"></script>
+    <script src="index.js"></script>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
