--- a/start.html
+++ b/start.html
@@ -218,8 +218,8 @@
             <span class="material-symbols-outlined timer-icon">timer</span> <!-- Иконка таймера -->
         </div>
         <div class="question-text">
-            <span class="question-number">Вопрос 1</span>
-            <span class="total-questions">/10</span>
+            <span id="question-numbercount" class="question-number">Вопрос ...</span>
+            <span id="total-questionscount" class="total-questions">/...</span>
         </div>
         <div class="dotted-line"></div> <!-- Пунктирная линия с меньшими и менее частыми точками -->
         <div id="question_text" class="question-content">
