--- a/result.html
+++ b/result.html
@@ -179,7 +179,7 @@
         <div class="result-box">
             <div class="congrats">Поздравляем!</div>
             <h1>Вы набрали:</h1>
-            <div class="score" id="score">10/10</div>
+            <div class="score" id="score">...</div>
         </div>
 
         <!-- Серая плашка -->
