--- a/edittest.html
+++ b/edittest.html
@@ -104,7 +104,7 @@
 
     <div class="container mt-5">
         <h1 class="text-center">Редактировать тест</h1>
-        <p class="text-center">Logged in as: <span id="userEmail"></span></p>
+        <p class="text-center"><span id="testName"></span></p>
 
         <div class="mb-3">
             <label for="startDate" class="form-label">Дата начала проведения</label>
