--- a/edittest.html
+++ b/edittest.html
@@ -88,7 +88,7 @@
             color: #ffffff;
         }
 
-        #questionsList {
+        #questionsList, #resultsTable {
             display: flex;
             flex-direction: column;
             gap: 10px;
@@ -228,7 +228,7 @@
 
         <!-- Новый блок, теперь занимает оставшееся пространство -->
         <div class="main-content"
-            style="flex: 1; background-color: #2C2C2C; margin: 20px; padding: 15px; border-radius: 10px; box-sizing: border-box;">
+            style="flex: 1; background-color: #2C2C2C; margin: 20px; margin-left: 10px; padding: 15px; border-radius: 10px; box-sizing: border-box;">
             <div class="d-flex justify-content-between align-items-center mt-3">
                 <h2 style="color: #ffffff;">Вопросы</h2>
                 <button class="btn" style="background-color: #3D3D3D; color: #ffffff;"
@@ -238,6 +238,21 @@
 
             <!-- Список вопросов -->
             <div id="questionsList" class="mt-3">
+                <!-- Вопросы будут загружены здесь -->
+            </div>
+        </div>
+
+        <div class="main-content"
+            style="flex: 1; background-color: #2C2C2C; margin: 20px; margin-left: 10px; padding: 15px; border-radius: 10px; box-sizing: border-box;">
+            <div class="d-flex justify-content-between align-items-center mt-3">
+                <h2 style="color: #ffffff;">Результаты</h2>
+                <button class="btn" style="background-color: #3D3D3D; color: #ffffff;"
+                    onclick="printRes()">Печать</button>
+
+            </div>
+
+            <!-- Список вопросов -->
+            <div id="resultsTable" class="mt-3">
                 <!-- Вопросы будут загружены здесь -->
             </div>
         </div>
@@ -256,7 +271,23 @@
 
 
 
-
+    <!-- Модальное окно для отображения результатов -->
+    <div class="modal fade" id="resultsModal" tabindex="-1" aria-labelledby="resultsModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="resultsModalLabel">Результаты теста</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body" id="resultsModalBody">
+                    <div id="resultsTable"></div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <div class="modal fade" id="selectedAnswersModal" tabindex="-1" aria-labelledby="selectedAnswersModalLabel"
