--- a/result.html
+++ b/result.html
@@ -192,12 +192,12 @@
             <div class="time-info">Тест был пройден за:<br>функция в разработке</div>
             <div class="time-box">
                 <div>
-                    <div class="time-number" id="minutes">?</div>
+                    <div class="time-number" id="minutess">?</div>
                     <div class="time-label">Минут</div>
                 </div>
                 <div class="divider"></div>
                 <div>
-                    <div class="time-number" id="seconds">?</div>
+                    <div class="time-number" id="secondss">?</div>
                     <div class="time-label">Секунд</div>
                 </div>
             </div>
